Fixed off-centre twitter cloud image and cleaned up some testing code

--- a/src/Pages/TwitterCloud/TwitterCloud.module.css
+++ b/src/Pages/TwitterCloud/TwitterCloud.module.css
@@ -69,7 +69,6 @@ button{
 @media screen and (max-width: 600px){
     .image{
         margin-top: 20vh;
-        grid-column: span 1;
     }
     .header{
         margin-top: 10vh;
